Fixed z-index for NavBarNotificationList

--- a/client/src/styles/NavBarNotificationList.css
+++ b/client/src/styles/NavBarNotificationList.css
@@ -11,7 +11,7 @@
   border-bottom-right-radius: 5px;
   overflow: hidden;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  /* z-index: ; */
+  z-index: 2; /* need to be >= z-index of (.search-results) in SearchResultsContainer.css if want to be layer above SearchResultsContainer */
 }
 
 .header-notifications > li {
